# PiSystemMonitor

./: .gitignore  LICENSE  README.md  app.py  app_base.py  build.sh  install.sh  log.py  main.py  requirements.txt  sample_thread.py  startup.sh.default
hardware/: PiSystemMonitor.3mf  README.md  waveshare35c.dtbo  waveshare35c.dts
hardware/solidworks/: PiSystemMonitor - Hat.SLDPRT  PiSystemMonitor.SLDPRT
hardware/stl/: PiSystemMonitor - Hat.STL  PiSystemMonitor.STL
software/: CMakeLists.txt  vcpkg.json
software/include/: App.hpp  AppBase.hpp  ImGuiOpenGLBackend.hpp  ImGuiSDL2Backend.hpp  MetricsParser.hpp  MetricsSampleThread.hpp  Result.hpp  SDLError.hpp
software/src/: App.cpp  AppBase.cpp  ImGuiOpenGLBackend.cpp  ImGuiSDL2Backend.cpp  Main.cpp  MetricsParser.cpp  MetricsSampleThread.cpp  SDLError.cpp
